# hf_utils

./: .gitignore  CLAUDE.md  MIGRATION_SUMMARY.md  README.md  pyproject.toml
notebooks/old_ipynbs/: simple_preds.py  test_parsing.py
scripts/: analyze_dataset_comparison.py  debug_shapes.py  debug_window_features.py  feature_correlation_analysis.py
src/hf_utils/: __init__.py  branches.py  checkpoints.py  datadecide.py  huggingface.py  paths.py  weights.py
